【更新】AuthApi增加校验验证码接口方便其他模块调用